--- a/Factory/index.html
+++ b/Factory/index.html
@@ -4,9 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <script src="PokerManager.js"></script>
 </head>
 <body>
-    
+    <div class="gallery"></div>
+    <script type="module" src="index.js"></script>
 </body>
 </html>
